--- a/config/database.yml
+++ b/config/database.yml
@@ -1,23 +1,17 @@
 development:
-  adapter: postgresql
+  adapter: sqlite3
   database: versionkeeper_dev
-  host: localhost
   pool: 5
   timeout: 5000
-  username: postgres
-  password: admin
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: postgresql
+  adapter: sqlite3
   database: versionkeeper_test
-  host: localhost
   pool: 5
   timeout: 5000
-  username: postgres
-  password: admin
 
 production:
   adapter: postgresql
