--- a/config/database.yml
+++ b/config/database.yml
@@ -14,7 +14,7 @@ test:
   timeout: 5000
 
 production:
-  adapter: postgresql
+  adapter: sqlite3
   database: versionkeeper_prod
   pool: 5
   timeout: 5000
